--- a/src/pug/chunk/additional.pug
+++ b/src/pug/chunk/additional.pug
@@ -3,4 +3,4 @@ section.additional-info
             h2.additional-info__title Нужна дополнительная информация?
             p.additional-info__text Заполните форму для заказа или получения информации, нажав на кнопку Получить консультацию!
             .additional-info__button
-                button(type="button").additional-info__btn Получить консультацию 
+                a(href="contacts.html").additional-info__btn Получить консультацию 
