--- a/src/sass/block/catalog.scss
+++ b/src/sass/block/catalog.scss
@@ -23,7 +23,7 @@
         height: 75px;
         color: $white;
         border-radius: 38px;
-        
+        margin: 0 auto;
         background-color: $orange;
         transition: all .3s linear;
         &:hover{
