--- a/src/sass/block/bread.scss
+++ b/src/sass/block/bread.scss
@@ -12,6 +12,10 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        transition: color .3s linear;
+        &:hover{
+            color: $blue;
+        }
         &::after{
             content: '';
             display: block;
