--- a/src/sass/block/consult.scss
+++ b/src/sass/block/consult.scss
@@ -96,12 +96,19 @@
     height: 17px;
     background-color: #E8E8E8;
     opacity: 1;
+    transition: background-color .3s linear;
+        opacity: 0.7;
 }
 .swiper-pagination-bullet-active{
     background-color: $blue;
+    opacity: 1;
 }
 .swiper-pagination{
     @include breakpoint(xll){
         display: none;
     }
+}
+.swiper-pagination-bullet:hover{
+    background-color: $blue;
+
 }
