--- a/src/sass/block/contacts.scss
+++ b/src/sass/block/contacts.scss
@@ -11,6 +11,7 @@
 }
 .contacts-list{
     // padding-right: 90px;
+    margin: 0 auto;
     &__item{
         margin-bottom: 30px;
         &:last-child{
