--- a/src/sass/block/info.scss
+++ b/src/sass/block/info.scss
@@ -90,7 +90,8 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        background-color: $blue;
+        background: linear-gradient(99.1deg, #004BA9 10.74%, #023779 111.87%);
+        opacity: 0.85;
         top: 0;
         left: 0;
         opacity: 0.85;
