--- a/src/pug/chunk/header.pug
+++ b/src/pug/chunk/header.pug
@@ -9,7 +9,7 @@ header.header
                 ul.header-nav
                     each item in link
                         +nav(item.name, item.link)
-                    .header__back
+                    //- .header__back
             .header-nav__back 
         
     
