--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -15,7 +15,7 @@ block page
             .info__wrapper 
                 h1.info__title Передовые технологии промышленной фильтрации
                 p.info__text С 1960 года IFAB поставляет комплексные решения фильтрации для разных отраслей по всему миру
-                button(type="button").info__btn Получить консультацию
+                a(href="contacts.html").info__btn Получить консультацию
                 .info-card 
                     ul.info-card__list
                         each item in card 
@@ -40,7 +40,7 @@ block page
                     .swiper-pagination
                      
                 .consult__form 
-                    h1.consult__title Мы имеем опыт решения задач, связанных с фильтрацией и очисткой продуктов и сред на разных производствах
+                    div.consult__title Мы имеем опыт решения задач, связанных с фильтрацией и очисткой продуктов и сред на разных производствах
                     p.consult__subtitle Оставьте данные для заказа или получения консультации
                     include chunk/form
     include chunk/map
