--- a/src/sass/block/catalog.scss
+++ b/src/sass/block/catalog.scss
@@ -32,6 +32,18 @@
         &:focus{
             background-color: $deeporange;
         }
+        @include breakpoint(lg){
+            // margin-top: 40px;
+            // margin-bottom: 80px;
+        }
+        @include breakpoint(md){
+            height: 60px;
+        }
+        @include breakpoint(sm){
+            font-size: 16px;
+            height: 50px;
+            max-width: 250px;
+        }
         @include breakpoint(xs){
             font-size: 16px;
         }
@@ -42,9 +54,15 @@
     // align-items: center;
     // justify-self: center;
     // justify-content: center;
+    
+    margin: 0 auto;
     margin-top: 80px;
     margin-bottom: 160px;
-    
+    @include breakpoint(lg){
+        margin-top: 40px;
+        margin-bottom: 70px;
+    }
+   
     // align-items: center;
 }
 .catalog-cell img{
