--- a/src/sass/block/footer.scss
+++ b/src/sass/block/footer.scss
@@ -4,4 +4,12 @@
     padding: 35px 0 34px 0;
     font-size: 24px;
     line-height: 31.06px;
+    @include breakpoint(lg){
+        font-size: 16px;
+        padding: 20px 0 20px 0;
+    }
+    @include breakpoint(xs){
+        padding: 8px 0 8px 0;
+        font-size: 12px;
+    }
 }
