--- a/src/sass/block/form.scss
+++ b/src/sass/block/form.scss
@@ -25,6 +25,17 @@ textarea:focus{
         font-size: 24px;
         line-height: 108.19%;
         height: 75px;
+        @include breakpoint(md){
+            font-size: 20px;
+            padding: 15px 20px 14px 20px;
+            line-height: 100%;
+            height: 60px;
+        }
+        @include breakpoint(sm){
+            font-size: 16px;
+            padding: 10px 15px 9px 15px;
+            height: 50px;
+        }
     }
     &__text::placeholder{
         color: #848484;
@@ -34,6 +45,17 @@ textarea:focus{
         width: 100%;
         resize: none;
         height: 165px;
+        @include breakpoint(md){
+            font-size: 20px;
+            padding: 15px 20px 14px 20px;
+            line-height: 100%;
+            height: 135px;
+        }
+        @include breakpoint(sm){
+            font-size: 16px;
+            padding: 10px 15px 9px 15px;
+            height: 115px;
+        }
 
     }
     &__textarea::placeholder{
@@ -64,6 +86,16 @@ textarea:focus{
         }
         &:focus{
             background-color: $deeporange;
+        }
+        
+        @include breakpoint(md){
+            
+            height: 60px;
+        }
+        @include breakpoint(sm){
+            font-size: 16px;
+            height: 50px;
+            
         }
     }
     &__inner{
