--- a/src/sass/block/info.scss
+++ b/src/sass/block/info.scss
@@ -5,6 +5,18 @@
     background-image: url("../img/info/background.png");
     background-position: left calc(50% - 270px) top calc(50% - 95px);
     background-repeat: no-repeat;
+    @include breakpoint(xl){
+        padding-top: 80px;
+        padding-bottom: 90px;
+    }
+    @include breakpoint(md){
+        padding-top: 40px;
+        padding-bottom: 45px;
+    }
+    @include breakpoint(xs){
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
     &__title{
         font-family: 'raleway';
         font-weight: 700;
@@ -13,8 +25,18 @@
         line-height: 115%;
         margin-bottom: 25px;
         max-width: 830px;
+        @include breakpoint(xl){
+            font-size: 48px;
+        }
+        @include breakpoint(md){
+            font-size: 38px;
+            text-align: center;
+        }
         @include breakpoint(sm){
-            font-size: 32px;
+            font-size: 28px;
+        }
+        @include breakpoint(xs){
+            font-size: 24px;
         }
     }
     &__text{
@@ -23,6 +45,21 @@
         font-family: 'ptsans';
         max-width: 547px;
         margin-bottom: 120px;
+        @include breakpoint(xl){
+            font-size: 20px;
+            margin-bottom: 80px;
+        }
+        @include breakpoint(md){
+            margin-bottom: 40px;
+            max-width: 100%;
+            text-align: center;   
+        }
+        @include breakpoint(sm){
+            font-size: 20px;
+        }
+        @include breakpoint(xs){
+            font-size: 18px;
+        }
     }
     &__btn{
         background-color: $orange;
@@ -35,15 +72,30 @@
         border-radius: 38px;
         margin-bottom: 166px;
         transition: all .3s linear;
+        color: $white;
         &:hover{
             background-color: $lightorange;
         }
         &:focus{
             background-color: $deeporange;
         }
+        @include breakpoint(xl){
+            margin-bottom: 90px;
+        }
+        @include breakpoint(md){
+            margin: 0 auto;   
+            margin-bottom: 45px;
+            height: 60px;
+        }
+        @include breakpoint(sm){
+            font-size: 16px;
+            height: 50px;
+            max-width: 250px;
+        }
         @include breakpoint(xs){
             font-size: 16px;
         }
+        
     }
 }
 .info-card{
@@ -54,6 +106,9 @@
         column-gap: 20px;
         flex-wrap: wrap;
         // align-items: center;
+        @include breakpoint(lg){
+            justify-content: center;
+        }
         
     }
     &__item{
@@ -66,6 +121,12 @@
         color: $white;
         max-width: 402px;
         width: 100%;
+        @include breakpoint(lg){
+            min-height: 178px;
+        }
+        @include breakpoint(md){
+            min-height: 134px;
+        }
     }
     &__title{
         position: relative;
@@ -76,6 +137,15 @@
         font-weight: 700;
         margin-bottom: 10px;
         line-height: 110%;
+        @include breakpoint(lg){
+            max-width: 100%;
+        }
+        @include breakpoint(md){
+          font-size: 20px;   
+        }
+        @include breakpoint(xs){
+            font-size: 18px;
+        }
     }
     &__text{
         position: relative;
@@ -83,6 +153,15 @@
         font-weight: 400;
         max-width: 236px;
         line-height: 108%;
+        @include breakpoint(lg){
+            max-width: 100%;
+        }
+        @include breakpoint(md){
+            font-size: 16px;   
+        }
+        @include breakpoint(xs){
+            font-size: 14px;
+        }
     }
     &__back{
         z-index: 1;
